k8s/system/ingress.yml
#
# The purpose of the ingress controller is to route HTTP/HTTPS requests
# on each cluster node to a specific service based on rules (see below).
# We basically use this to expose all our apps and services via a single
# HTTP/HTTPS endpoint.
#
# Documentation on the nginx ingress controller:
# https://github.com/kubernetes/ingress-nginx
#
---
#
# A default backend is required to serve requests that don't get catched by
# the rules configured in the ingress controller
#
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: default-http-backend
  labels:
    app: default-http-backend
  namespace: default
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: default-http-backend
    spec:
      terminationGracePeriodSeconds: 60
      containers:
      - name: default-http-backend
        # Any image is permissable as long as:
        # 1. It serves a 404 page at /
        # 2. It serves 200 on a /healthz endpoint
        image: gcr.io/google_containers/defaultbackend:1.4
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 30
          timeoutSeconds: 5
        ports:
        - containerPort: 8080
        resources:
          limits:
            cpu: 10m
            memory: 20Mi
          requests:
            cpu: 10m
            memory: 20Mi
---
#
# Expose the default backend pod as a service
#
apiVersion: v1
kind: Service
metadata:
  name: default-http-backend
  namespace: default
  labels:
    app: default-http-backend
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: default-http-backend

---
#
# The ingress controller dispatches HTTP requests to service pods
#
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: nginx-ingress-controller
  namespace: default
  labels:
    k8s-app: nginx-ingress-controller
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-ingress-controller
  template:
    metadata:
      labels:
        app: nginx-ingress-controller
    spec:
      serviceAccountName: nginx-ingress-serviceaccount
      containers:
        - name: nginx-ingress-controller
          image: quay.io/kubernetes-ingress-controller/nginx-ingress-controller:0.10.2
          args:
            - /nginx-ingress-controller
            - --default-backend-service=$(POD_NAMESPACE)/default-http-backend
            - --publish-service=$(POD_NAMESPACE)/ingress-nginx-service
          ports:
          - name: http
            containerPort: 80
          - name: https
            containerPort: 443
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /healthz
              port: 10254
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /healthz
              port: 10254
              scheme: HTTP
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
---
#
# Ingress routing rules, apps will be routed based on host names where
# services will be routed based on paths.
#
# TODO:
# - add whitelist-source-range annotation
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-nginx
  # see https://github.com/kubernetes/ingress-nginx/blob/master/docs/user-guide/annotations.md
  annotations:
    kubernetes.io/ingress.class: "nginx"
    # TODO: we want ssl-redirect to be true but see https://github.com/jetstack/cert-manager/issues/194
    ingress.kubernetes.io/ssl-redirect: "false"
    kubernetes.io/tls-acme: "true"
    certmanager.k8s.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
    - hosts:
      - backend.68.183.242.251.xip.io
      secretName: backend-cert-lep
    - hosts:
      - spid-testenv2.68.183.242.251.xip.io
      secretName: spid-testenv2-cert-lep
  rules:
  - host: backend.68.183.242.251.xip.io
    http:
      paths:
      - path: /
        backend:
          serviceName: backend
          servicePort: 80
  - host: spid-testenv2.68.183.242.251.xip.io
    http:
      paths:
      - path: /
        backend:
          serviceName: spid-testenv2
          servicePort: 8088
